--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
                 <li><a class="navItems" href="Html/Services/Services.html" target="_blank">Services</a></li>
                 <li><a class="navItems" href="Html/Agents/Agents.html" target="_blank">Agents</a></li>
                 <li><a class="navItems" href="Html/Login/signin.html" target="_blank">Login</a></li>
-                <li><button>Search</button></li>
             </ul>
         </div>
 
         <div class="content">
-            <h1>Jass-Sangha</h1>
+            <h1>Jass Sangha</h1>
             <p>Velit aliqua culpa sit esse commodo cillum.
                 Deserunt cupidatat<br> consequat nulla elit dolor magna deserunt.
             </p>
             <!-- <button class="search">Apply</button> -->
-            <a href="https://github.com/Jass-Sangha/Public.git" class="apply" target="_blank">Apply</a>
+            <a href="Html/Users/applicationform.html" class="apply" target="_blank">Apply</a>
     </header>
     </div>
 
