--- a/Html/Users/applicationform.html
+++ b/Html/Users/applicationform.html
@@ -25,9 +25,9 @@
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
                     <label for="username" class="form-label">Address</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label"></label>
+                    <label for="username" class="form-label">Mobile</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label"></label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
                 </div>
                 <div>
@@ -37,21 +37,21 @@
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
                     <label for="username" class="form-label">Address</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label"></label>
+                    <label for="username" class="form-label">Mobile</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label"></label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
                 </div>
                 <div>
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label">Agent Name</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label">Guardian name</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label">Address</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label">Mobile</label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
-                    <label for="username" class="form-label">Email or Phone</label>
+                    <label for="username" class="form-label"></label>
                     <input type="text" id="username" name="username" class="form-input" placeholder="Email or Phone">
                 </div>
             </div>
